--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -103,33 +103,45 @@
 		</div>
 		<div class="services-grids">
 			<div class="col-md-2 services-grid">
-				<div class="voice"></div>
-				<h3>咨询</h3>
+				<a href="{:U('Services/news')}" style="text-decoration:none">
+					<div class="voice"></div>
+					<h3>咨询</h3>
+				</a>
 				<p>创业扶持政策咨询，法律咨询。</p>
 			</div>
 			<div class="col-md-2 services-grid">
-				<div class="checks"></div>
-				<h3>场地</h3>
+				<a href="{:U('Services/area')}" style="text-decoration:none">
+					<div class="checks"></div>
+					<h3>场地</h3>
+				</a>
 				<p>肇庆学院中巴软件园和大学生创新创业指导中心。</p>
 			</div>
 			<div class="col-md-2 services-grid">
-				<div class="settings"></div>
-				<h3>培训</h3>
+				<a href="{:U('Services/train')}" style="text-decoration:none">
+					<div class="settings"></div>
+					<h3>培训</h3>
+				</a>
 				<p>针对学员的职业规划需求，量身定制培训。</p>
 			</div>
 			<div class="col-md-2 services-grid">
-				<div class="product"></div>
-				<h3>产品</h3>
+				<a href="shop.cxg-e.com" style="text-decoration:none">
+					<div class="product"></div>
+					<h3>产品</h3>
+				</a>
 				<p>与各大厂商合作，产品直供，还有美工修图。</p>
 			</div>
 			<div class="col-md-2 services-grid">
-				<div class="analysis"></div>
-				<h3>数据</h3>
+				<a href="{:U('Services/data')}" style="text-decoration:none">
+					<div class="analysis"></div>
+					<h3>数据</h3>
+				</a>
 				<p>每个月有专门的财务做数据报表，无后顾之忧。</p>
 			</div>
 			<div class="col-md-2 services-grid">
-				<div class="release"></div>
-				<h3>学习</h3>
+				<a href="{:U('Services/study')}" style="text-decoration:none">
+					<div class="release"></div>
+					<h3>学习</h3>
+				</a>
 				<p>创业优秀者，可以免费提供外地学习机会。</p>
 			</div>
 			<div class="clearfix"></div>
