--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -124,7 +124,7 @@
 				<p>针对学员的职业规划需求，量身定制培训。</p>
 			</div>
 			<div class="col-md-2 services-grid">
-				<a href="shop.cxg-e.com" style="text-decoration:none">
+				<a href="http://shop.cxg-e.com" style="text-decoration:none">
 					<div class="product"></div>
 					<h3>产品</h3>
 				</a>
