--- a/App/Home/View/Public/nav.html
+++ b/App/Home/View/Public/nav.html
@@ -15,7 +15,7 @@
 								<li><a class="" href="{:U('Services/news')}">新闻资讯</a></li>
 								<li><a class="" href="{:U('Services/area')}">办公场地</a></li>
 								<li><a class="" href="{:U('Services/train')}">培训</a></li>
-								<li><a class="" href="shop.cxg-e.com">产品</a></li>
+								<li><a class="" href="http://shop.cxg-e.com">产品</a></li>
 								<li><a class="" href="{:U('Services/data')}">数据</a></li>
 								<li><a class="" href="{:U('Services/study')}">学习机会</a></li>						
 							</ul>
