--- a/App/Home/View/Services/area.html
+++ b/App/Home/View/Services/area.html
@@ -13,15 +13,17 @@
 
 <!-- team -->
 <div id="link" class="team">
-	<div class="container">
+	<div class="container article">
 		<div class="team-header team-header-about">
 			<h2>办公场地</h2>
 		</div>
-		
-				
-			<div class="clearfix"></div>
+		<br />
+		<div class="content">
+			{$area.content}
 		</div>
+
 	</div>
+
 </div>
 <!-- //contact -->
 <!-- footer -->
