--- a/App/Home/View/Services/train.html
+++ b/App/Home/View/Services/train.html
@@ -13,11 +13,15 @@
 
 <!-- team -->
 <div id="link" class="team">
-	<div class="container">
+	<div class="container article">
 		<div class="team-header team-header-about">
 			<h2>培训</h2>
 		</div>
-			
+		<br />
+		<div class="content">
+			{$train.content}
+		</div>
+	
 	</div>
 </div>
 <!-- //contact -->
@@ -25,13 +29,6 @@
 	<include file="Public/footer" title="肇庆创星谷创新创业孵化基地"/>
 <!-- //footer -->
 <script src="__PUBLIC__/js/layer/layer.js"></script>
-<script>
-	$(function(){
-		
-	
-	
-	});
 
-</script>
 </body>
 </html>
