--- a/App/Home/View/Services/article.html
+++ b/App/Home/View/Services/article.html
@@ -13,10 +13,10 @@
 	<div class="container article">
 	
 	<div class="callback-content"><a href="{:U('services/news')}"><i class="glyphicon glyphicon-chevron-left"></i>返回</a></div>
-		<div class=" content">
-			<h2 class="title">{$title}</h2>
+		<div class="content">
+			<h2 class="title">{$news.title}</h2>
 			<br />
-			{$content}
+			{$news.content}
 		</div>
 	</div>
 </div>
