--- a/App/Home/View/Services/study.html
+++ b/App/Home/View/Services/study.html
@@ -13,11 +13,14 @@
 
 <!-- team -->
 <div id="link" class="team">
-	<div class="container">
+	<div class="container article">
 		<div class="team-header team-header-about">
 			<h2>学习机会</h2>
 		</div>
-			
+		<br />
+		<div class="content">
+			{$study.content}
+		</div>	
 			
 	</div>
 </div>
