修改ueditor的图片自适应

--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -2050,7 +2050,8 @@ float:right;
 .callback-content a:hover{color:#BD2D30}
 @media screen and (min-width: 1200px) {
   .article {
-    width:60%
+    width:70%
     }
 }
+..article img{max-width:100%}
 .article .title{text-align:center;margin-top:50px;}
