--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -2053,5 +2053,5 @@ float:right;
     width:70%
     }
 }
-.article img{max-width:100%; height: auto;}
+.article img{max-width:100%; height: auto!important;}
 .article .title{text-align:center;margin-top:50px;}
