--- a/App/Home/View/Services/news.html
+++ b/App/Home/View/Services/news.html
@@ -14,7 +14,7 @@
 <!-- team -->
 <div id="link" class="team">
 	<div class="container">
-		<div class="team-header news-title">
+		<div class="team-header team-header-about">
 			<h2>新闻资讯</h2>
 		</div>
 		<br />
