--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -2055,8 +2055,6 @@ float:right;
 }
 .article img{max-width:100%; height: auto!important;}
 .article .title{text-align:center;margin-top:50px;}
-@media screen and (min-width: 640) {
-  .article {
-    width:70%
-    }
+@media screen and (min-width: 640px) {
+  .container .news-content{ font-size:14px;  line-height:14px; }
 }
