--- a/App/Home/View/Public/nav.html
+++ b/App/Home/View/Public/nav.html
@@ -20,6 +20,16 @@
 								<li><a class="" href="{:U('Services/study')}">学习机会</a></li>						
 							</ul>
 						</li>
+						<li  id="service" ><a class="scroll" href=" javascript:void(0); ">优质服务</a>
+							<ul class="nav">
+								<li><a class="" href="{:U('Services/news')}">新闻资讯</a></li>
+								<li><a class="" href="{:U('Services/area')}">办公场地</a></li>
+								<li><a class="" href="{:U('Services/train')}">培训</a></li>
+								<li><a class="" href="http://shop.cxg-e.com">产品</a></li>
+								<li><a class="" href="{:U('Services/data')}">数据</a></li>
+								<li><a class="" href="{:U('Services/study')}">学习机会</a></li>						
+							</ul>
+						</li>
 						<li><a class="" href="#team">孵化企业</a></li>
 						<li><a class="" href="#cooperation">合作企业</a></li>
 						<li><a class="" href="#contact">线上报名</a></li>						
