--- a/App/Cxg/View/Yule/index.html
+++ b/App/Cxg/View/Yule/index.html
@@ -14,7 +14,7 @@
             <div class="content-wrapper">
                 <section class="content-header">
                     <h1>
-                        培训
+                        娱乐
                     </h1>
                     <ol class="breadcrumb">
                         <li>
@@ -25,14 +25,14 @@
                             </a>
                         </li>
                         <li class="active">
-                            培训
+                            娱乐
                     </ol>
                 </section>
                 <section class="content">
                     <div class="box box-primary">
                         <div class="box-header with-border">
                             <h3 class="box-title">
-                               培训
+                               娱乐活动
                             </h3>
                         </div>
                         <!-- /.box-header -->
@@ -62,7 +62,7 @@
         <!-- ./wrapper -->
         <include file="Public/script" />
         <script>
-            $('#pYule').addClass("active").siblings().removeClass("active");
+            $('#pTrain').addClass("active").siblings().removeClass("active");
         </script>
 		<script charset="utf-8" src="__PLUGINS__/ueditor/ueditor.config.js"></script>
 		<script charset="utf-8" src="__PLUGINS__/ueditor/ueditor.all.min.js"></script>
