--- a/App/Home/View/Services/data.html
+++ b/App/Home/View/Services/data.html
@@ -17,9 +17,9 @@
 		<div class="team-header team-header-about">
 			<h2>数据</h2>
 		</div>
-			<div class="about-grids">
-			该页面暂未开放
-		</div>
+		<div class="content">
+			{$yule.content}
+		</div>	
 	</div>
 </div>
 <!-- //contact -->
