--- a/App/Cxg/View/Public/left.html
+++ b/App/Cxg/View/Public/left.html
@@ -33,6 +33,7 @@
             </li>
 			<li id="pArea"><a href="{:U('Area/index')}"><i class="fa fa-circle-o "></i> <span>办公场地</span></a></li>
 			<li id="pTrain"><a href="{:U('Train/index')}"><i class="fa fa-circle-o "></i> <span>培训</span></a></li>
+			<li id="pYule"><a href="{:U('Yule/index')}"><i class="fa fa-circle-o "></i> <span>娱乐</span></a></li>
 			<li id="pStudy"><a href="{:U('Study/index')}"><i class="glyphicon glyphicon-pencil"></i> <span>学习机会</span></a></li>
 			<li id="pAdmin" class="treeview">
               <a href="#">
