--- a/App/Cxg/View/Yule/index.html
+++ b/App/Cxg/View/Yule/index.html
@@ -62,7 +62,7 @@
         <!-- ./wrapper -->
         <include file="Public/script" />
         <script>
-            $('#pTrain').addClass("active").siblings().removeClass("active");
+            $('#pYule').addClass("active").siblings().removeClass("active");
         </script>
 		<script charset="utf-8" src="__PLUGINS__/ueditor/ueditor.config.js"></script>
 		<script charset="utf-8" src="__PLUGINS__/ueditor/ueditor.all.min.js"></script>
