--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -105,9 +105,9 @@
 			<div class="col-md-2 services-grid">
 				<a href="{:U('Services/news')}" style="text-decoration:none">
 					<div class="voice"></div>
-					<h3>咨询</h3>
+					<h3>新闻</h3>
 				</a>
-				<p>创业扶持政策咨询，法律咨询。</p>
+				<p>创星谷新闻咨询。</p>
 			</div>
 			<div class="col-md-2 services-grid">
 				<a href="{:U('Services/area')}" style="text-decoration:none">
@@ -133,9 +133,9 @@
 			<div class="col-md-2 services-grid">
 				<a href="{:U('Services/data')}" style="text-decoration:none">
 					<div class="analysis"></div>
-					<h3>数据</h3>
+					<h3>文娱</h3>
 				</a>
-				<p>每个月有专门的财务做数据报表，无后顾之忧。</p>
+				<p>创星谷的文化娱乐活动。</p>
 			</div>
 			<div class="col-md-2 services-grid">
 				<a href="{:U('Services/study')}" style="text-decoration:none">
