--- a/App/Home/View/Public/footer.html
+++ b/App/Home/View/Public/footer.html
@@ -16,12 +16,8 @@
 			}
 			);
 
-			$('#service').toggle(function(){
-				$('.nav').show();
-			},
-			function(){
-				$('.nav').hide()
-			}
+			$('#service').click(function(){
+				$('.nav2').toggle();}
 			);	
 		})
 			
