--- a/App/Home/View/Public/nav.html
+++ b/App/Home/View/Public/nav.html
@@ -20,26 +20,28 @@
 								<li><a class="" href="{:U('Services/study')}">学习机会</a></li>						
 							</ul>
 						</li>
-						<li  id="service" ><a class="scroll" href=" javascript:void(0); ">优质服务</a>
-							<ul class="nav">
+						<li  id="service" ><a class="scroll" href=" javascript:void(0); "><i class="pull-left glyphicon glyphicon-chevron-left"></i>优质服务</a>
+							
+						</li>
+						<li><a class="" href="#team">孵化企业</a></li>
+						<li><a class="" href="#cooperation">合作企业</a></li>
+						<li><a class="" href="#contact">线上报名</a></li>						
+					</ul>
+					<ul class="nav2">
 								<li><a class="" href="{:U('Services/news')}">新闻资讯</a></li>
 								<li><a class="" href="{:U('Services/area')}">办公场地</a></li>
 								<li><a class="" href="{:U('Services/train')}">培训</a></li>
 								<li><a class="" href="http://shop.cxg-e.com">产品</a></li>
 								<li><a class="" href="{:U('Services/data')}">文娱</a></li>
 								<li><a class="" href="{:U('Services/study')}">学习机会</a></li>						
-							</ul>
-						</li>
-						<li><a class="" href="#team">孵化企业</a></li>
-						<li><a class="" href="#cooperation">合作企业</a></li>
-						<li><a class="" href="#contact">线上报名</a></li>						
-					</ul>					
+					</ul>
 					<!-- script for menu -->
 						<script> 
 							$( "span.menu" ).click(function() {
 							$( "ul.nav1" ).slideToggle( 300, function() {
 							 // Animation complete.
 							});
+							$('.nav2').hide()
 							});
 						</script>
 					<!-- //script for menu -->
