--- a/Public/css/newstyle.css
+++ b/Public/css/newstyle.css
@@ -1,4 +1,4 @@
-.navigation .nav1 .nav {position:absolute; display:none ;background-color:#D34346}
+.navigation .nav1 .nav {position:relative; display:none ;background-color:#D34346}
 .team-header-about {width:150px; text-align:center ;  margin:25px auto 25px auto; border-left:none;}
 .container .news-content{min-height:300px}
 .container .news-content li{margin:auto; margin-bottom:15px;}
@@ -7,6 +7,35 @@
 .container .news-content span{float:right}
 #service {display:none}
 @media screen and (max-width: 640px) {
-  #service{display:block }
-  #services{display:none }
+  #service{display:block; }
+  #services{display:none; }
+  #services ul{position:absolute; }
+}
+@media(max-width:640px){
+	ul.nav2{
+		display:none;
+		background:#D34346;
+		}
+	.navigation ul .nav2 li {
+		display: inline-block;
+		text-align: center;
+		margin: 0;
+		width: 100%;
+		padding: 0px 0;
+		}
+	.navigation .nav2 {
+		position: absolute;
+		padding: 0;
+		margin: 0;
+		top: 7.5%;
+		right: 50%;
+		width: 30%;
+		z-index:999;
+		overflow:visible!important;
+		}
+		.navigation {
+		width: 7%;
+		margin: 0 16px;
+		float:right;
+		}		
 }
