--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1596,14 +1596,18 @@ float:right;
 		width: 100%;
 		padding: 0px 0;
 		}
+	.navigation .nav1{ 
+		border-left: 8px solid #BD2D30;}
 	.navigation ul {
 		position: absolute;
 		padding: 0;
 		margin: 0;
-		top: 10.9%;
-		left: 0%;
-		width: 100%;
+		
+		top: 7.5%;
+		right: 0%;
+		width: 50%;
 		z-index:999;
+		overflow:visible!important;
 		}
 		.social-icons {
 		width: 18%;
@@ -1749,7 +1753,7 @@ float:right;
 		width: 9%;
 		}
 		.navigation ul {
-			top: 10.9%;
+			top: 7.5%;
 			}
 		.banner-info {
 		width: 66%;
