--- a/Public/css/newstyle.css
+++ b/Public/css/newstyle.css
@@ -1,4 +1,4 @@
-.navigation .nav1 .nav {position:relative; display:none ;background-color:#D34346}
+.navigation .nav1 .nav {display:none ;background-color:#D34346}
 .team-header-about {width:150px; text-align:center ;  margin:25px auto 25px auto; border-left:none;}
 .container .news-content{min-height:300px}
 .container .news-content li{margin:auto; margin-bottom:15px;}
@@ -9,6 +9,10 @@
 @media screen and (max-width: 640px) {
   #service{display:block; }
   #services{display:none; }
+}
+@media screen and (min-width: 640px) {
+  #service{display:none; }
+  .nav2 {display:none; }
   #services ul{position:absolute; }
 }
 @media(max-width:640px){
