修改为华贸

--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -21,8 +21,8 @@
 					<div class="new"></div>
 				</div>
 				<div class="bottom-right">
-					<h3>学校提供场地</h3>
-					<p>肇庆学院中巴软件园和大学生创新创业指导中心</p>
+					<h3>免费提供创业场地</h3>
+					<p>500平方米创业办公室，单独的仓储。</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
@@ -31,7 +31,7 @@
 					<div class="fresh"></div>
 				</div>
 				<div class="bottom-right">
-					<h3>政府支持</h3>
+					<h3>创业支持</h3>
 					<p>为创业学生制定减免税制、提供贷款贴息、设立创业基金。</p>
 				</div>
 				<div class="clearfix"></div>
@@ -318,11 +318,11 @@
 		</div>
 		<div class="address">
 			<h3>地址</h3>
-			<p><span>广东省</span><label>肇庆市</label>肇庆市端州区电子信息产业促进中心</p>
+			<p><span>广东省</span><label>肇庆市</label>肇庆市华贸电子商务有限公司</p>
 			<ul>
 				<li><span>电话</span>   0758-2107833</li>
-				<li><span>手机</span>   18027824032</li>
-				<li><span>邮箱</span>   <a href="mail-to:example@mail.com">zqhcltd@163.com</a></li>
+				<li><span>手机</span>   15697585563</li>
+				<li><span>邮箱</span>   <a href="mail-to:example@mail.com">zqcxge@163.com</a></li>
 			</ul>
 			
 		</div>
@@ -337,13 +337,7 @@
 		</div>
 			<div class="work-bottom">
 				<ul id="flexiselLink">			
-					<li>
-						<div class="team-grid">
-							
-							<h3>肇庆市华贸电子商务有限公司</h3>
-							<p>跨境贸易</p>
-						</div>
-					</li>
+					
 					<li>
 						<div class="team-grid">
 							
