修改为华贸

--- a/App/Home/View/Public/footer.html
+++ b/App/Home/View/Public/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
 	<div class="container">
-			<p>Copyright &copy; 2016.肇庆市端州区电子信息产业促进中心 All rights reserved.<a target="_blank" href="http://hc.cxg-e.com">制作者</a> - 华创信息科技有限公司 <a target="_blank" href="http://www.miitbeian.gov.cn/">粤ICP备16049954号</a></p>
+			<p>Copyright &copy; 2016.肇庆市华贸电子商务有限公司 All rights reserved.<a target="_blank" href="http://hc.cxg-e.com">制作者</a> - 华创信息科技有限公司 <a target="_blank" href="http://www.miitbeian.gov.cn/">粤ICP备16049954号</a></p>
 			
 			<div class="clearfix"></div>
 	</div>
