修改关键词

--- a/App/Home/View/Public/header.html
+++ b/App/Home/View/Public/header.html
@@ -3,7 +3,7 @@
 	<link href="__PUBLIC__/css/style.css" rel="stylesheet" type="text/css"/>
 	<link href="__PUBLIC__/css/newstyle.css" rel="stylesheet" type="text/css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="keywords" content="肇庆市华贸,肇庆华贸,华贸电子商务有限公司,肇庆市华贸电子商务有限公司,创星谷,肇庆创星谷,肇庆创新创业,肇庆孵化基地,肇庆就业与培训" />
 
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Abcty2d6CGtscG1TZK3K32ZFIR5bMURZ"></script>
